--- a/index.html
+++ b/index.html
@@ -48,29 +48,18 @@
 								<div class="carousel-inner" role="listbox">
 
 									<div class="carousel-item active">
-										<img src="images/nkumpi_cover.svg" alt="Nkumpi0" width="2000" height="500">
+										<img src="images/nutek_cover.jpg" alt="Nutek" width="2000" height="500">
 									</div>
 
 
 									<div class="carousel-item">
-										<img src="images/Slide3.jpg" alt="Nkumpi3" width="2000" height="500">
-									</div>
-
-									<div class="carousel-item">
-										<img src="images/Slide0.jpg" alt="Nkump1" width="2000" height="500">
+										<img src="images/Slide0.jpg" alt="Nutek0" width="2000" height="500">
 										<div class="carousel-caption">
-											<h3>INFORMAL TRADING</h3>
-											<p>Small Medium-Micro Enterprises (SMMEs) play an important economic role of being key drivers of economic growth, innovation, and job creation.</p>
+											<h3>Electrical and Construction projects</h3>
+											<p> We offer expertise in electrical panel design and wiring solutions. We deliver reliable and efficient electrical solutions for various industrial and commercial needs.</p>
 										</div>
 									</div>
 
-									<div class="carousel-item">
-										<img src="images/Slide1.jpg" alt="Nkumpi2" width="2000" height="500">
-										<div class="carousel-caption">
-											<h3>REVOLUTIONIZING CONVENIENCE</h3>
-											<p>How Decentralized Township Economy is Changing the socio-economic landscape.</p>
-										</div>
-									</div>
 						
 								<!-- Left and right controls -->
 								<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
