--- a/index.html
+++ b/index.html
@@ -106,20 +106,8 @@
 				<!--image carousel start-->
 					<div class="containers">
 							<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
-								<!-- Indicators -->
-								<ol class="carousel-indicators">
-									<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-									<li data-target="#myCarousel" data-slide-to="1"></li>
-									<li data-target="#myCarousel" data-slide-to="2"></li>
-									<li data-target="#myCarousel" data-slide-to="3"></li>
-								</ol>
 								<!-- Wrapper for slides -->
 								<div class="carousel-inner" role="listbox">
-
-									<div class="carousel-item active">
-										<img src="images/nutek_cover.jpg" alt="Nutek" width="2000" height="500">
-									</div>
-
 
 									<div class="carousel-item">
 										<img src="images/Slide0.jpg" alt="Nutek0" width="2000" height="500">
@@ -128,23 +116,12 @@
 											<p> We offer expertise in electrical panel design and wiring solutions. We deliver reliable and efficient electrical solutions for various industrial and commercial needs.</p>
 										</div>
 									</div>
-
-						
-								<!-- Left and right controls -->
-								<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-									<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-									<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-								</a>
 							</div>
 						</div>
 					</div>
 			<footer class="footer-distributed">
 			<div class="footer-left">
-				<h3>Nkumpi<span>Trading</span></h3>
+				<h3>Nutek<span>Group</span></h3>
 				<p class="footer-links">
 					<a href="#" class="link-1">Home</a>
 					<a href="services.html">Services</a>
