--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
 				<!--image carousel start-->
 					<div class="containers">
 							<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+								<!-- Indicators -->
+								<ol class="carousel-indicators">
+									<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+									<li data-target="#myCarousel" data-slide-to="1"></li>
+									<li data-target="#myCarousel" data-slide-to="2"></li>
+									<li data-target="#myCarousel" data-slide-to="3"></li>
+								</ol>
 								<!-- Wrapper for slides -->
 								<div class="carousel-inner" role="listbox">
 
