--- a/index.html
+++ b/index.html
@@ -106,17 +106,10 @@
 				<!--image carousel start-->
 					<div class="containers">
 							<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
-								<!-- Indicators -->
-								<ol class="carousel-indicators">
-									<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-									<li data-target="#myCarousel" data-slide-to="1"></li>
-									<li data-target="#myCarousel" data-slide-to="2"></li>
-									<li data-target="#myCarousel" data-slide-to="3"></li>
-								</ol>
 								<!-- Wrapper for slides -->
 								<div class="carousel-inner" role="listbox">
 
-									<div class="carousel-item">
+									<div class="carousel-item active">
 										<img src="images/Slide0.jpg" alt="Nutek0" width="2000" height="500">
 										<div class="carousel-caption">
 											<h3>Electrical and Construction projects</h3>
