--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 							<a href="" class="cs-social-link">
 								<img class="cs-social-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/instagram1a.svg" alt="logo" width="12" height="12" aria-hidden="true" decoding="async">
 							</a>
-							<a href="" class="cs-social-link">
+							<!--<a href="" class="cs-social-link">
 								<img class="cs-social-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/youtube1a.svg" alt="logo" width="12" height="12" aria-hidden="true" decoding="async">
-							</a>
+							</a>-->
 						</div>
 					</div>
 					<!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
