--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
 							<div class="cs-picture-wrapper">
 								<picture class="cs-picture cs-picture1">
 									<!--Mobile Image-->
-									<source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting9.jpg">
+									<source media="(max-width: 600px)" srcset="images/img1.jpg">
 									<!--Tablet and above Image-->
-									<source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting9.jpg">
-									<img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting9.jpg" alt="meeting" width="434" height="414">
+									<source media="(min-width: 601px)" srcset="images/img1.jpg">
+									<img loading="lazy" decoding="async" src="images/img1.jpg" alt="meeting" width="434" height="414">
 								</picture>
 								<div class="cs-box">
 									<span class="cs-header">Attorney Growth</span>
@@ -194,10 +194,10 @@
 							</div>
 							<picture class="cs-picture cs-picture2">
 								<!--Mobile Image-->
-								<source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/computer.jpg">
+								<source media="(max-width: 600px)" srcset="images/img0.jpg">
 								<!--Tablet and above Image-->
-								<source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/computer.jpg">
-								<img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/computer.jpg" alt="on computer" width="197" height="197">
+								<source media="(min-width: 601px)" srcset="images/img0.jpg">
+								<img loading="lazy" decoding="async" src="images/img0.jpg" alt="on computer" width="197" height="197">
 							</picture>
 						</div>
 					</div>
