--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 				<div class="cs-container">
 					<div class="cs-content">
 						<div class="cs-flex">
-							<span class="cs-topper">Why Choose Us</span>
+							<span class="cs-topper"><br>Why Choose Us</span>
 							<h2 class="cs-title">Grow Your Business with Our New Bold Agency</h2>
 						</div>
 						<p class="cs-text">
-							Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis voluptatem eum cupiditate totam reiciendis quam minus inventore sint rem impedit esse quasi Tenetur sed reprehenderit earum a magni aliquid blanditiis dolores, veritatis soluta autem beatae officia expedita ipsum rerum doloribus sit provident delectus.
+							<br>Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis voluptatem eum cupiditate totam reiciendis quam minus inventore sint rem impedit esse quasi Tenetur sed reprehenderit earum a magni aliquid blanditiis dolores, veritatis soluta autem beatae officia expedita ipsum rerum doloribus sit provident delectus.
 						</p>
 					</div>  
 					<div class="cs-wrapper">
