--- a/index.html
+++ b/index.html
@@ -131,7 +131,13 @@
 							<h2 class="cs-title">Grow Your Business with Our New Bold Agency</h2>
 						</div>
 						<p class="cs-text">
-							<br>Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis voluptatem eum cupiditate totam reiciendis quam minus inventore sint rem impedit esse quasi Tenetur sed reprehenderit earum a magni aliquid blanditiis dolores, veritatis soluta autem beatae officia expedita ipsum rerum doloribus sit provident delectus.
+							<br>Our 24-hour callout service; unparalleled after-sales maintenance
+							packages, and guarantees on all works and products guaranteed by
+							SABS have led us to become the leaders of electrical services in the
+							industrial, residential, and commercial sectors. Responding to the
+							needs of our customers with superior products and service is what
+							being "Always On" means, but don't take our word for it; 
+							<br>contact us today and discover Nutek quality for yourself.
 						</p>
 					</div>  
 					<div class="cs-wrapper">
