--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 								</picture>
 								<!-- Text Grouped For Flexbox-->
 								<div class="cs-text-group">
-									<h3 class="cs-h3">Answer a Few Questions</h3>
+									<h3 class="cs-h3">Clientele</h3>
 									<p class="cs-item-text">
-										We welcome and celebrate different perspectives to help our firm, our clients and our people adip iscing elit achieve.
+										We focus on any suitable and potential client seeking our recommended professional services.
 									</p>
 								</div>
 							</li>
@@ -163,9 +163,9 @@
 								</picture>
 								<!-- Text Grouped For Flexbox-->
 								<div class="cs-text-group">
-									<h3 class="cs-h3">Complimentary Call</h3>
+									<h3 class="cs-h3">Market</h3>
 									<p class="cs-item-text">
-										We welcome and celebrate different perspectives to help our firm, our clients and our people adip iscing elit achieve.
+										Our focus is mainly on domestic, commercial, and industrial repairs, electrical installations, and commissioning of equipment/ machinery. To be involved in projects, shutdowns, and not limited construction work.
 									</p>
 								</div>
 							</li>
@@ -177,9 +177,9 @@
 								</picture>
 								<!-- Text Grouped For Flexbox-->
 								<div class="cs-text-group">
-									<h3 class="cs-h3">Grow Your Wealth</h3>
+									<h3 class="cs-h3">Quality Assurance</h3>
 									<p class="cs-item-text">
-										We welcome and celebrate different perspectives to help our firm, our clients and our people adip iscing elit achieve.
+										We always aim to deliver exceptional, reliable service and good workmanship to our customers/ clients. We strive for continuous improvement to meet our customer's demands.
 									</p>
 								</div>
 							</li>
@@ -194,8 +194,10 @@
 									<img loading="lazy" decoding="async" src="images/img1.jpg" alt="meeting" width="434" height="414">
 								</picture>
 								<div class="cs-box">
-									<span class="cs-header">Attorney Growth</span>
-									<span class="cs-desc">Aqestic recusandae lauda </span>
+									<span class="cs-header">Objective</span>
+									<span class="cs-desc">To provide engineering solutions within our communities and
+										to multiply other revenues to create jobs and to maintain a
+										sustainable business entity.</span>
 								</div>
 							</div>
 							<picture class="cs-picture cs-picture2">
