--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 										sustainable business entity.</span>
 								</div>
 							</div>
-							<picture class="cs-picture cs-picture2">
-								<!--Mobile Image-->
+							<!--<picture class="cs-picture cs-picture2">
+								!--Mobile Image--
 								<source media="(max-width: 600px)" srcset="images/img0.jpg">
-								<!--Tablet and above Image-->
+								!--Tablet and above Image--
 								<source media="(min-width: 601px)" srcset="images/img0.jpg">
 								<img loading="lazy" decoding="async" src="images/img0.jpg" alt="on computer" width="197" height="197">
-							</picture>
+							</picture>-->
 						</div>
 					</div>
 				</div>
