--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 								<div class="cs-text-group">
 									<h3 class="cs-h3">Market</h3>
 									<p class="cs-item-text">
-										Our focus is mainly on domestic, commercial, and industrial repairs, electrical installations, and commissioning of equipment/ machinery. To be involved in projects, shutdowns, and not limited construction work.
+										Our focus is mainly on domestic, commercial, and industrial repairs, electrical installations, and commissioning of equipment/ machinery.
 									</p>
 								</div>
 							</li>
