--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<div class="cs-content">
 						<div class="cs-flex">
 							<span class="cs-topper"><br>Why Choose Us</span>
-							<h2 class="cs-title">Grow Your Business with Our New Bold Agency</h2>
+							<h2 class="cs-title">Grow Your Business with Our Agency</h2>
 						</div>
 						<p class="cs-text">
 							<br>Our 24-hour callout service; unparalleled after-sales maintenance
