--- a/index.html
+++ b/index.html
@@ -211,54 +211,98 @@
 					</div>
 				</div>
 			</section>         
-			<footer class="footer-distributed">
-			<div class="footer-left">
-				<h3>Nutek<span>Group</span></h3>
-				<p class="footer-links">
-					<a href="#" class="link-1">Home</a>
-					<a href="services.html">Services</a>
-					<a href="about.html">About</a>
-					<a href="media.html">Media</a>
-					<a href="contact.html">Contact</a>
-				</p>
-				<div class = "body_txt"> 
-					<p> Subscribe to our newsletter!</p>  
-					<div class = "inps">  
-					  <input type = "email" name = " " id = " " placeholder = "Enter e-mail"> <br>  
-					  <button> Subscribe </button>  
-					</div>  
-				  </div>  
-			</div>
-			<div class="footer-center">
-				<div>
-					<i class="fa fa-map-marker"></i>
-					<p><span>Mathibela</span> Limpopo, South Africa</p>
-				</div>
-				<div>
-					<i class="fa fa-phone"></i>
-					<p>+27 154 911 087</p>
-				</div>
-				<div>
-					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@company.com">info@nkumpitrading.co.za</a></p>
-				</div>
-				<div>
-					<i class="fa fa-copyright"></i>
-					<p>NkumpiTrading, 2023</p>
-				</div>
-			</div>
-			<div class="footer-right">
-				<p class="footer-company-about">
-					<span>About the company</span>
-					To develop, build and provide world-class services for better living, working, and traveling conditions in order to improve the quality of life for all.
-				</p>
-				<div class="footer-icons">
-					<a href="https://www.facebook.com/Nkumpitrading.co.za"><i class="fa fa-facebook"></i></a>
-					<a href="https://twitter.com/nkumpitrading"><i class="fa fa-twitter"></i></a>
-					<a href="https://www.instagram.com/nkumpitradingpty/"><i class="fa fa-instagram"></i></a>
-				</div>
-			</div>
-		</footer>
+			    <!-- ============================================ -->
+				<!--                   Footer                     -->
+				<!-- ============================================ -->
+
+				<footer id="cs-footer-1292">
+					<div class="cs-container">      
+						<!-- Logo Group -->
+						<div class="cs-logo-group">
+							<a aria-label="go back to home" class="cs-logo" href="">
+								<img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="images/logo.jpg" alt="logo" width="240" height="32">
+							</a>
+							<p class="cs-text">
+								We planning, designing, financing, and executing projects.
+							</p>
+							<a href="mailto:info@mail.com" class="cs-link">
+								<img class="cs-link-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/construction-mail.svg" alt="icon" width="24" height="24">
+								hi@stitchconstruction.com
+							</a>
+						</div>
+						<!-- Links -->
+						<ul class="cs-nav">
+							<li class="cs-nav-li">
+								<span class="cs-header">Services</span>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Email Marketing</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Brandings</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Campaign</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Offline</a>
+							</li>
+						</ul>
+						<ul class="cs-nav">
+							<li class="cs-nav-li">
+								<span class="cs-header">About</span>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Our Story</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Benefits</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Team</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Career</a>
+							</li>
+						</ul>
+						<ul class="cs-nav">
+							<li class="cs-nav-li">
+								<span class="cs-header">Contact</span>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Facebook</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Instagram</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">LinkedIn</a>
+							</li>
+						</ul>
+						<ul class="cs-nav">
+							<li class="cs-nav-li">
+								<span class="cs-header">Help</span>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">FAQ</a>
+							</li>
+							<li class="cs-nav-li">
+								<a class="cs-nav-link" href="">Contact us</a>
+							</li>
+						</ul>
+					</div>
+					<div class="cs-bottom">
+						<span class="cs-copyright">Copyright© 2023. 
+							<a class="cs-copyright-link" href="">Stitch Construction.</a>
+							All Right Reserved.
+						</span>
+						<a href="" class="cs-copyright-link">Terms of Service</a>
+						<a href="" class="cs-copyright-link">Privacy Policy</a>
+					</div>
+					<!--Floating Cirlces-->
+					<div class="cs-floater" aria-hidden="true"></div>
+				</footer>
+                                
         		<div id="mobile__menu" class="overlay">
             		<a class="close">&times;</a>
             		<div class="overlay__content">
