--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
 						</ul>
 					</div>
 					<div class="cs-bottom">
-						<span class="cs-copyright">Copyright© 2023. 
-							<a class="cs-copyright-link" href="">Stitch Construction.</a>
+						<span class="cs-copyright">Copyright© 2024. 
+							<a class="cs-copyright-link" href="">Secured by Prolate Meteors.</a>
 							All Right Reserved.
 						</span>
 						<a href="" class="cs-copyright-link">Terms of Service</a>
