--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
 							</div>
 						</div>
 					</div>
+					<div class="containers">
+				    </div>
 			<!-- ============================================ -->
 			<!--                Why Choose Us                 -->
 			<!-- ============================================ -->
