--- a/index.html
+++ b/index.html
@@ -233,34 +233,34 @@
 						<picture class="cs-picture">
 							<!--Mobile Image-->
 							<source media="(max-width: 600px)"
-									srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-1.png">
+									srcset="images/gallery0.jpg">
 							<!--Tablet and above Image-->
 							<source media="(min-width: 601px)"
-									srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-1.png">
+									srcset="images/gallery0.jpg">
 							<img loading="lazy" decoding="async"
-									src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-1.png" alt="picture"
+									src="images/gallery0.jpg" alt="picture"
 									width="480" height="549">
 						</picture>
 						<picture class="cs-picture">
 							<!--Mobile Image-->
 							<source media="(max-width: 600px)"
-									srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-2.png">
+									srcset="images/gallery1.jpg">
 							<!--Tablet and above Image-->
 							<source media="(min-width: 601px)"
-									srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-2.png">
+									srcset="images/gallery1.jpg">
 							<img loading="lazy" decoding="async"
-									src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-2.png" alt="picture"
+									src="images/gallery1.jpg" alt="picture"
 									width="480" height="549">
 						</picture>
 						<picture class="cs-picture">
 							<!--Mobile Image-->
 							<source media="(max-width: 600px)"
-									srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-3.png">
+									srcset="images/gallery2.jpg">
 							<!--Tablet and above Image-->
 							<source media="(min-width: 601px)"
-									srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-3.png">
+									srcset="images/gallery2.jpg">
 							<img loading="lazy" decoding="async"
-									src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/enterprise-gallery-3.png" alt="picture"
+									src="images/gallery2.jpg" alt="picture"
 									width="480" height="549">
 						</picture>
 					</div>
