--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
 						<h2 class="cs-title">Some of Our Memories</h2>
 						<!--If you remove the cs-text, the rectangle shape will disappear.  If you need to remove it, transfer the :before and .cs-text:last-of-type styles to the cs-title on mobile and desktop-->
 						<p class="cs-text">
-							Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error.
+							Explore our gallery and witness the synergy, innovation, and milestones that define our journey.
 						</p>
-						<a href="" class="cs-button-solid">View All</a>
+						<a href="https://www.instagram.com/nutek_group/" class="cs-button-solid">View All</a>
 					</div>
 					<div class="cs-gallery">
 						<picture class="cs-picture">
