--- a/index.html
+++ b/index.html
@@ -596,12 +596,12 @@
     <div class="container">
       <div class="navbar-brand">
         <span class="navbar-logo">
-					<a href="https://mobiri.se">
-						<img src="assets/images/photo-1562879138-f22c4ac6c263.jpeg" style="height: 4.3rem;">
+					<a href="https//wwww.nutekgroup.org">
+						<img src="images/logo.jpg" style="height: 4.3rem;">
 					</a>
 				</span>
 				<span class="navbar-caption-wrap">
-          <a class="navbar-caption text-black display-4" href="https://mobiri.se">ElectroSpark</a>
+          <a class="navbar-caption text-black display-4" href="https://www.nutekgroup.org">NutekGroup</a>
         </span>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -630,7 +630,7 @@
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="https://mobiri.se">Explore</a>
+          <a class="btn btn-primary display-4" href="https://mobiri.se">Get Qoute</a>
         </div>
       </div>
     </div>
@@ -901,7 +901,7 @@
           </h1>
         </div>
         <div class="text-wrapper align-left" data-form-type="formoid">
-          <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="">
+          <form action="https://www.nutekgroup.org" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="">
             <div class="row">
               <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
               <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -2455,7 +2455,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="">
+                <form action="https://www.nutekgroup.org" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
