--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="https://mobiri.se">Get Qoute</a>
+          <a class="btn btn-primary display-4" href="https://www.nutekgroup.org">Get Qoute</a>
         </div>
       </div>
     </div>
@@ -692,8 +692,8 @@
         <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1">
           <strong>Power Up</strong>
         </h1>
-        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Unleash the Shocking World of Electrical Engineering - Where Sparks Fly and Ideas Light Up!</p>
-        <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="#">Discover</a></div>
+        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Electrifying Innovation: Energizing industries with cutting-edge engineering!</p>
+        <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="src/NutekGroupProfile.pdf">Discover</a></div>
       </div>
     </div>
   </div>
@@ -787,16 +787,16 @@
     <div class="grid-container">
       <div class="grid-container-3" style="transform: translate3d(-200px, 0px, 0px);">
         <div class="grid-item">
-          <img src="assets/images/photo-1508416163602-e4eb39645e86.jpeg">
+          <img src="images/gallery1.jpg">
         </div>
         <div class="grid-item">
-          <img src="assets/images/photo-1509099652299-30938b0aeb63.jpeg">
+          <img src="images/gallery0.jpg">
         </div>
         <div class="grid-item">
-          <img src="assets/images/photo-1509390144018-eeaf65052242.jpeg">
+          <img src="images/gallery3.jpg">
         </div>
         <div class="grid-item">
-          <img src="assets/images/photo-1552772588-12592fc15a64.jpeg">
+          <img src="images/gallery2.jpg">
         </div>
       </div>
     </div>
