fix footer and update partners

--- a/index.html
+++ b/index.html
@@ -927,6 +927,15 @@
                     <div class="grid-item">
                         <img src="images/gallery2.jpg">
                     </div>
+                    <div class="grid-item">
+                        <img src="images/gallery0.jpg">
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/gallery3.jpg">
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/gallery2.jpg">
+                    </div>
                 </div>
             </div>
         </div>
@@ -1118,7 +1127,7 @@
                 <div class="col-12 content-head">
                     <div class="mbr-section-head">
                         <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                            <strong>Our Electrifying Partners</strong>
+                            <strong>Our Partners</strong>
                         </h4>
                     </div>
                 </div>
@@ -1127,7 +1136,7 @@
                 <div class="item features-image col-12 col-md-6 col-sm-6 col-lg-2 active">
                     <div class="item-wrapper">
                         <div class="item-img">
-                            <img src="assets/images/photo-1617791160588-241658c0f566.jpeg" data-slide-to="1" data-bs-slide-to="1">
+                            <img src="images/partner0.svg" data-slide-to="1" data-bs-slide-to="1">
                         </div>
                     </div>
                 </div>
@@ -2868,7 +2877,7 @@
             <div class="media-container-row align-center mbr-white">
                 <div class="col-12">
                     <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                        © 2024 Shock Zone. All Rights Electrified.
+                        © 2024 Nutek Group. All Rights Reserved.
                     </p>
                 </div>
             </div>
@@ -2897,4 +2906,6 @@
     </script>
 </body>
 
-</html>g
+</html>
+
+</html>
