preapre second round

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                         </li>
                     </ul>
                     <div class="navbar-buttons mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="https://www.nutekgroup.org">Get Qoute</a>
+                        <a class="btn btn-primary display-4" href="contact.html">Get Qoute</a>
                     </div>
                 </div>
             </div>
@@ -746,7 +746,7 @@
     <style>
         .cid-u5TVqzMano {
             display: flex;
-            background-image: url("assets/images/photo-1446776899648-aa78eefe8ed0.jpeg");
+            background-image: url("images/cover.jpg");
         }
         
         .cid-u5TVqzMano .mbr-overlay {
@@ -815,7 +815,7 @@
             padding-top: 2rem;
             padding-bottom: 2rem;
             background-color: #ffffff;
-            height: 500px;
+            height: 100%;
             /* Set a fixed height for the grid items */
         }
         
@@ -1032,7 +1032,7 @@
                                 <div data-for="email" class="col-lg-6 col-md-6 col-sm-12 form-group">
                                     <input type="email" name="email" placeholder="test@email.com" data-form-field="email" class="form-control display-7" value="" id="email-header02-0">
                                 </div>
-                                <div class="col-auto mbr-section-btn"><button type="submit" class="w-100 btn btn-primary display-7">Get </button></div>
+                                <div class="col-auto mbr-section-btn"><button type="submit" class="w-100 btn btn-primary display-7">Subscribe</button></div>
                             </div>
                         </form>
                     </div>
@@ -1347,7 +1347,7 @@
                             </h6>
 
                             <div class="mbr-section-btn item-footer ">
-                                <a href=" " class="btn item-btn btn-primary display-7 ">
+                                <a href="services.html" class="btn item-btn btn-primary display-7 ">
                                 Explore
                             </a>
                             </div>
@@ -1367,7 +1367,7 @@
                                 <strong>Residential</strong>
                             </h6>
                             <div class="mbr-section-btn item-footer ">
-                                <a href=" " class="btn item-btn btn-primary display-7 ">
+                                <a href="services.html" class="btn item-btn btn-primary display-7 ">
                                 Explore
                             </a>
                             </div>
@@ -1377,7 +1377,7 @@
                 <div class="item features-image col-12 col-md-6 col-lg-4 ">
                     <div class="item-wrapper ">
                         <div class="item-img mb-3 ">
-                            <img src="assets/images/photo-1454779132693-e5cd0a216ed3.jpeg " data-slide-to="2 " data-bs-slide-to="2 ">
+                            <img src="images/commmercial.jpg" data-slide-to="2 " data-bs-slide-to="2 ">
                         </div>
                         <div class="item-content align-left ">
                             <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7 ">
@@ -1387,7 +1387,7 @@
                                 <strong>Commercial</strong>
                             </h6>
                             <div class="mbr-section-btn item-footer ">
-                                <a href=" " class="btn item-btn btn-primary display-7 ">
+                                <a href="services.html" class="btn item-btn btn-primary display-7 ">
                                 Explore
                             </a>
                             </div>
@@ -1515,87 +1515,72 @@
                         </div>
                         <div id="bootstrap-accordion_0 " class="panel-group accordionStyles accordion " role="tablist " aria-multiselectable="true ">
                             <div class="card mb-3 ">
-                                <div class="card-header " role="tab " id="headingOne ">
-                                    <a role="button " class="panel-title collapsed " data-toggle="collapse " data-bs-toggle="collapse " data-core=" " href="#collapse1_0 " aria-expanded="false " aria-controls="collapse1 ">
-                                        <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5 ">
-                                            What Sparks Our Engineers&#x27; Passion?
-                                        </h6>
-                                        <span class="sign mbr-iconfont mobi-mbri-arrow-down "></span>
-                                    </a>
-                                </div>
-                                <div id="collapse1_0 " class="panel-collapse noScroll collapse " role="tabpanel " aria-labelledby="headingOne " data-parent="#accordion " data-bs-parent="#bootstrap-accordion_0 ">
-                                    <div class="panel-body ">
-                                        <p class="mbr-fonts-style panel-text display-7 ">
-                                            Our engineers are fueled by the electrifying challenges of harnessing power.
-                                        </p>
+                                <div class="card mb-3">
+                                    <div class="card-header" role="tab" id="headingOne">
+                                        <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_0" aria-expanded="false" aria-controls="collapse1">
+                                            <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
+                                                What Sparks Our Engineers' Passion?
+                                            </h6>
+                                            <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
+                                        </a>
+                                    </div>
+                                    <div id="collapse1_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_0">
+                                        <div class="panel-body">
+                                            <p class="mbr-fonts-style panel-text display-7">
+                                                The company projects high prospects of a brand meeting customer demand and transforming from one level to another as technology changes and advances.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="card mb-3 ">
-                                <div class="card-header " role="tab " id="headingOne ">
-                                    <a role="button " class="panel-title collapsed " data-toggle="collapse " data-bs-toggle="collapse " data-core=" " href="#collapse2_0 " aria-expanded="false " aria-controls="collapse2 ">
-                                        <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5 ">
-                                            How Electrifying Are Our Services?
-                                        </h6>
-                                        <span class="sign mbr-iconfont mobi-mbri-arrow-down "></span>
-                                    </a>
-                                </div>
-                                <div id="collapse2_0 " class="panel-collapse noScroll collapse " role="tabpanel " aria-labelledby="headingOne " data-parent="#accordion " data-bs-parent="#bootstrap-accordion_0 ">
-                                    <div class="panel-body ">
-                                        <p class="mbr-fonts-style panel-text display-7 ">
-                                            Our services are so electrifying, they&#x27;ll leave you buzzing with excitement!
-                                        </p>
+                                <div class="card mb-3 ">
+                                    <div class="card-header" role="tab" id="headingOne">
+                                        <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_1" aria-expanded="false" aria-controls="collapse1">
+                                            <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
+                                                What Makes Our Engineers Stand Out?
+                                            </h6>
+                                            <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
+                                        </a>
+                                    </div>
+                                    <div id="collapse1_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_0">
+                                        <div class="panel-body">
+                                            <p class="mbr-fonts-style panel-text display-7">
+                                                We are fully prepared to develop and acquire substantial knowledge and experience as a newly formed business unit in the market.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="card mb-3 ">
-                                <div class="card-header " role="tab " id="headingOne ">
-                                    <a role="button " class="panel-title collapsed " data-toggle="collapse " data-bs-toggle="collapse " data-core=" " href="#collapse3_0 " aria-expanded="false " aria-controls="collapse3 ">
-                                        <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5 ">
-                                            Why Choose Us for Your Electrical Needs?
-                                        </h6>
-                                        <span class="sign mbr-iconfont mobi-mbri-arrow-down "></span>
-                                    </a>
-                                </div>
-                                <div id="collapse3_0 " class="panel-collapse noScroll collapse " role="tabpanel " aria-labelledby="headingOne " data-parent="#accordion " data-bs-parent="#bootstrap-accordion_0 ">
-                                    <div class="panel-body ">
-                                        <p class="mbr-fonts-style panel-text display-7 ">
-                                            We&#x27;re the shockingly good choice for all your electrical engineering requirements.
-                                        </p>
+                                <div class="card mb-3 ">
+                                    <div class="card-header" role="tab" id="headingOne">
+                                        <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_2" aria-expanded="false" aria-controls="collapse1">
+                                            <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
+                                                What is Our Main Objective?
+                                            </h6>
+                                            <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
+                                        </a>
+                                    </div>
+                                    <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_0">
+                                        <div class="panel-body">
+                                            <p class="mbr-fonts-style panel-text display-7">
+                                                To provide engineering solutions within our communities and to multiply other revenues to create jobs and to maintain a sustainable business entity.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="card mb-3 ">
-                                <div class="card-header " role="tab " id="headingOne ">
-                                    <a role="button " class="panel-title collapsed " data-toggle="collapse " data-bs-toggle="collapse " data-core=" " href="#collapse4_0 " aria-expanded="false " aria-controls="collapse4 ">
-                                        <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5 ">
-                                            What Makes Our Engineers Stand Out?
-                                        </h6>
-                                        <span class="sign mbr-iconfont mobi-mbri-arrow-down "></span>
-                                    </a>
-                                </div>
-                                <div id="collapse4_0 " class="panel-collapse noScroll collapse " role="tabpanel " aria-labelledby="headingOne " data-parent="#accordion " data-bs-parent="#bootstrap-accordion_0 ">
-                                    <div class="panel-body ">
-                                        <p class="mbr-fonts-style panel-text display-7 ">
-                                            Our engineers are the brightest sparks in the industry, lighting up your projects.
-                                        </p>
+                                <div class="card mb-3 ">
+                                    <div class="card-header" role="tab" id="headingOne">
+                                        <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_3" aria-expanded="false" aria-controls="collapse1">
+                                            <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5">
+                                                How Do We Ensure Qaulity in Every Project?
+                                            </h6>
+                                            <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
+                                        </a>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="card mb-3 ">
-                                <div class="card-header " role="tab " id="headingOne ">
-                                    <a role="button " class="panel-title collapsed " data-toggle="collapse " data-bs-toggle="collapse " data-core=" " href="#collapse5_0 " aria-expanded="false " aria-controls="collapse5 ">
-                                        <h6 class="panel-title-edit mbr-semibold mbr-fonts-style mb-0 display-5 ">
-                                            How Do We Ensure Safety in Every Project?
-                                        </h6>
-                                        <span class="sign mbr-iconfont mobi-mbri-arrow-down "></span>
-                                    </a>
-                                </div>
-                                <div id="collapse5_0 " class="panel-collapse noScroll collapse " role="tabpanel " aria-labelledby="headingOne " data-parent="#accordion " data-bs-parent="#bootstrap-accordion_0 ">
-                                    <div class="panel-body ">
-                                        <p class="mbr-fonts-style panel-text display-7 ">
-                                            Safety is our top priority; we&#x27;ll keep your projects grounded and secure.
-                                        </p>
+                                    <div id="collapse1_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_0">
+                                        <div class="panel-body">
+                                            <p class="mbr-fonts-style panel-text display-7">
+                                                We always aim to deliver exceptional, reliable service and good workmanship to our customers/ clients. We strive for continuous improvement to meet our customer's demands.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -1603,7 +1588,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <style>
         .cid-u5TVqzNCof {
