--- a/contact.html
+++ b/contact.html
@@ -726,7 +726,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
                         <li class="nav-item">
-                            <a class="nav-link link text-black display-4" href="abouthtml">About</a>
+                            <a class="nav-link link text-black display-4" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link link text-black display-4" href="services.html" aria-expanded="false">Services</a>
@@ -736,7 +736,7 @@
                         </li>
                     </ul>
                     <div class="navbar-buttons mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="https://www.nutekgroup.org">Get Qoute</a>
+                        <a class="btn btn-primary display-4" href="contact.html">Get Qoute</a>
                     </div>
                 </div>
             </div>
