--- a/about.html
+++ b/about.html
@@ -989,7 +989,7 @@
                     <div class="item-wrapper ">
                         <div class="text-wrapper ">
                             <h6 class="card-title mbr-fonts-style mb-3 display-5 ">
-                                <strong>Vission</strong>
+                                <strong>Vision</strong>
                             </h6>
                             <p class="mbr-text mbr-fonts-style display-7 ">
                                 <a href="" class="text-black ">Nutek Electrical strive to be recognized as one of the leading World class electrical construction company in its core business of activities both within South Africa and abroad. Promoting, fostering and encouraging capacity electricity, development and skills transfer.</a>
