--- a/contact.html
+++ b/contact.html
@@ -710,7 +710,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-					<a href="https//wwww.nutekgroup.org">
+					<a href="index.html">
 						<img class="logo-img" src="images/logo.png" style="height: 4.3rem;">
 					</a>
 				</span>
