--- a/services.html
+++ b/services.html
@@ -710,7 +710,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-					<a href="https//wwww.nutekgroup.org">
+					<a href="index.html">
 						<img class="logo-img" src="images/logo.png" style="height: 4.3rem;">
 					</a>
 				</span>
@@ -893,7 +893,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Automation and Panel Design</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">PLC Programmin</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="industrial.html" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
@@ -908,7 +908,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Wiring</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Issuing of Certificate Of Compliance</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
@@ -923,7 +923,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical installations and commissioning</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Fault Finding</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
@@ -938,7 +938,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical repairs and maintenance</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Emergency shutdowns</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Explore</a></div>
                         </div>
                     </div>
                 </div>
