--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                         </li>
                     </ul>
                     <div class="navbar-buttons mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="contact.html">Get Qoute</a>
+                        <a class="btn btn-primary display-4" href="contact.html">Get Quote</a>
                     </div>
                 </div>
             </div>
