--- a/residential.html
+++ b/residential.html
@@ -736,7 +736,7 @@
                         </li>
                     </ul>
                     <div class="navbar-buttons mbr-section-btn">
-                        <a class="btn btn-primary display-4" href="contact.html">Get Qoute</a>
+                        <a class="btn btn-primary display-4" href="contact.html">Get Quote</a>
                     </div>
                 </div>
             </div>
@@ -909,7 +909,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Automation and Panel Design</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">PLC Programmin</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
                     </div>
                 </div>
@@ -924,7 +924,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical Wiring</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Issuing of Certificate Of Compliance</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
                     </div>
                 </div>
@@ -940,7 +940,7 @@
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical installations and commissioning</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Fault Finding</p>
                             <div class="mbr-section-btn item-footer">
-                                <a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a>
+                                <a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a>
                             </div>
                         </div>
                     </div>
@@ -956,7 +956,7 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Electrical repairs and maintenance</p>
                             <p class="mbr-text mbr-fonts-style mb-3 display-7">Emergency shutdowns</p>
-                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Qoute</a></div>
+                            <div class="mbr-section-btn item-footer"><a href="contact.html" class="btn item-btn btn-primary display-7">Quote</a></div>
                         </div>
                     </div>
                 </div>
